--- a/projects/titanic_survival_exploration/titanic_survival_exploration.ipynb
+++ b/projects/titanic_survival_exploration/titanic_survival_exploration.ipynb
@@ -172,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** *Replace this text with the prediction accuracy you found above.*"
+    "**Answer:** *Replace this text with the prediction accuracy you found above.  Test*"
    ]
   },
   {
